nuevos estados de donaciones
